[tool.poetry]
name = "lucyna"
version = "0.11.0"
description = "ecs-tool tries to eliminate common caveats for your day-to-day work with Elastic Container Service (ECS)."
authors = ["Daniel Ancuta <whisller@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/whisller/lucyna"
repository = "https://github.com/whisller/lucyna"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = ["aws", "ecs", "cli"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0"
boto3 = "^1.18"
rich = "^10.3.0"
click-log = "^0.3.2"
loguru = "^0.5.3"
arrow = "^1.1.0"
asciiplot = "^0.1.1"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
bump2version = "^1.0"
isort = "^5.9"

[tool.poetry.scripts]
lucyna = "lucyna.cli:safe_cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
